--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -13,36 +13,37 @@
       <p class="hidden max-md:flex text-white text-center align-middle pt-8 p-0">An open-source, in-browser tool for simplifying data processing workflows with high-performance server support, featuring code history and workflow orchestration.</p>
 
 
-      <div class="pt-10 text-center">
-        <div class="flex flex-row justify-center space-x-4 sm:space-x-0 sm:flex-col">
-          <a href="https://github.com/ESIPFed/Geoweaver" class="flex justify-center mb-4 sm:mb-4">
-            <div class="bg-white p-2 rounded cursor-pointer">
-              <button class="text-black flex items-center">
-                <i class="fa-brands fa-github mr-2"></i>
-                Github
-              </button>
-            </div>
-          </a>
-
-          <a href="#" class="flex justify-center mb-4 sm:mb-4">
-            <div class="bg-[#009AC4] p-2 rounded cursor-pointer">
-              <button class="text-white flex items-center">
-                <i class="fa-solid fa-video mr-2"></i>
-                Guide
-              </button>
-            </div>
-          </a>
-
-          <a href="https://geobrain.csiss.gmu.edu/Geoweaver" class="flex justify-center mb-4 sm:mb-0">
-            <div class="bg-white p-2 rounded cursor-pointer">
-              <button class="text-black flex items-center">
-                <i class="fa-solid fa-desktop mr-2"></i>
-                Demo
-              </button>
-            </div>
-          </a>
-        </div>
+<div class="pt-10 text-center">
+  <div class="flex flex-row justify-center items-center space-x-4">
+    <a href="https://github.com/ESIPFed/Geoweaver" class="flex justify-center mb-4">
+      <div class="bg-white p-2 rounded cursor-pointer">
+        <button class="text-black flex items-center">
+          <i class="fa-brands fa-github mr-2"></i>
+          Github
+        </button>
       </div>
+    </a>
+
+    <a href="#" class="flex justify-center mb-4">
+      <div class="bg-[#009AC4] p-2 rounded cursor-pointer">
+        <button class="text-white flex items-center">
+          <i class="fa-solid fa-video mr-2"></i>
+          Guide
+        </button>
+      </div>
+    </a>
+
+    <a href="https://geobrain.csiss.gmu.edu/Geoweaver" class="flex justify-center mb-4">
+      <div class="bg-white p-2 rounded cursor-pointer">
+        <button class="text-black flex items-center">
+          <i class="fa-solid fa-desktop mr-2"></i>
+          Demo
+        </button>
+      </div>
+    </a>
+  </div>
+</div>
+
 
     </div>
   </div>
