added guide page

--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -24,7 +24,7 @@
       </div>
     </a>
 
-    <a href="#" class="flex justify-center mb-4">
+    <a href="/guide" class="flex justify-center mb-4">
       <div class="bg-[#009AC4] p-2 rounded cursor-pointer">
         <button class="text-white flex items-center">
           <i class="fa-solid fa-video mr-2"></i>
