allow full screen on guide page

--- a/themes/geoweaver/layouts/guide/guide.html
+++ b/themes/geoweaver/layouts/guide/guide.html
@@ -9,7 +9,7 @@
         <h4>Installation & Setup</h4>
         <hr/>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1AXn19AGtOp5Yd2-AO_rXQkphtipBqhbx/preview" width="700" height="400" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1AXn19AGtOp5Yd2-AO_rXQkphtipBqhbx/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -18,7 +18,7 @@
         <h4>Environment Setup</h4>
         <hr/>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1NdJpjRHYFLi1WargZawIezvTwrea_Rt5/preview" width="700" height="400" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1NdJpjRHYFLi1WargZawIezvTwrea_Rt5/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -27,7 +27,7 @@
         <h4>Hosts</h4>
         <hr/>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1m_1Oo2z80bS3hMEkD_2hKEsoRQW7idIG/preview" width="700" height="400" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1m_1Oo2z80bS3hMEkD_2hKEsoRQW7idIG/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
         </div>
       </div>
 
@@ -37,7 +37,7 @@
         <h4>Workflow Demo</h4>
         <hr/>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1RY_BgLTLE3o9AGYwEL9Ebc_0pc2KThaY/preview" width="700" height="400" allow="autoplay"></iframe>
+          <iframe src="https://drive.google.com/file/d/1RY_BgLTLE3o9AGYwEL9Ebc_0pc2KThaY/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
         </div>
       </div>
 
