updated videos link from drive to youtube and added new videos

--- a/themes/geoweaver/layouts/guide/guide.html
+++ b/themes/geoweaver/layouts/guide/guide.html
@@ -7,42 +7,104 @@
     <div class="pt-5">
       <div class="pb-10">
         <h4>Installation & Setup</h4>
-        <hr/>
+        <hr />
+        <p>In this video, we’ll walk you through the simple steps to download, install, and configure GeoWeaver on
+          your macOS. Whether you're a professional managing geographic data or a student diving into data workflows,
+          this video will help you get started with GeoWeaver quickly and efficiently.</p>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1AXn19AGtOp5Yd2-AO_rXQkphtipBqhbx/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
+
+          <iframe src="https://youtube.com/embed/jUd1dzi18EQ" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
         </div>
       </div>
 
 
       <div class="pb-10">
         <h4>Environment Setup</h4>
-        <hr/>
+        <hr />
+        <p>Unlock the full potential of Geoweaver by setting up Python environments correctly on your host system! This
+          essential tutorial guides you through integrating Python environments with Geoweaver, ensuring your workflows
+          and processes run smoothly and effectively.</p>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1NdJpjRHYFLi1WargZawIezvTwrea_Rt5/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/KYiEHI0rn_o" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
         </div>
       </div>
 
 
       <div class="pb-10">
         <h4>Hosts</h4>
-        <hr/>
+        <hr />
+        <p>
+          his video provides a clear and concise guide to integrating additional computational resources into your
+          Geoweaver setup, enhancing your ability to manage and execute geospatial workflows efficiently.
+
+          In this video, you'll learn:<br />
+          1. The importance of hosts within the Geoweaver platform and how they power your workflows.<br />
+          2. A detailed walkthrough on adding a new host, including inputting the necessary host details.<br />
+          3. How to access, view, and edit host information.
+        </p>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1m_1Oo2z80bS3hMEkD_2hKEsoRQW7idIG/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/H66AVoBBaHs" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
         </div>
       </div>
 
 
 
       <div class="pb-10">
-        <h4>Workflow Demo</h4>
-        <hr/>
+        <h4>Processes Demo</h4>
+        <hr />
+        <p>
+          In this video, you'll learn:<br />
+          1. How to create new processes in Geoweaver using various scripting languages like Python and Shell.<br />
+          2. How to run these processes on your preferred host and manage their execution.<br />
+          3. A detailed guide on using Geoweaver's history feature to visualize execution flows, track changes, and
+          review past executions.
+        </p>
         <div class="mt-5 flex justify-center">
-          <iframe src="https://drive.google.com/file/d/1RY_BgLTLE3o9AGYwEL9Ebc_0pc2KThaY/preview" width="700" height="400" allow="autoplay" allowfullscreen></iframe>
+          <iframe src="https://www.youtube.com/embed/Vp5DZPrsG-w" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="pb-10">
+        <h4>Workflow Demo</h4>
+        <hr />
+        <p>
+          This video is your ultimate guide to mastering workflow functionalities within Geoweaver, helping you automate
+          complex analyses and streamline your data processing tasks with ease.<br />
+
+          In this video, you'll learn:<br />
+          1. How to start crafting new workflows from scratch using the Weaver tool.<br />
+          2. Step-by-step instructions on adding and connecting processes to build effective workflows.<br />
+          3. Detailed insights into the additional workflow management options, including importing, exporting, saving,
+          and running your workflows.
+        </p>
+        <div class="mt-5 flex justify-center">
+          <iframe src="https://www.youtube.com/embed/PJcMNR00QoE" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
+        </div>
+      </div>
+
+      <div class="pb-10">
+        <h4>Weather Forecasting using Geoweaver</h4>
+        <hr />
+        <p>
+          In this video, we'll guide you through each step of setting up and running a complete weather prediction
+          workflow.<br />
+          In this video, you'll learn:<br />
+          1. How to use Geoweaver for data analysis tasks<br />
+          2. How to skip the process and enable/Disable Logs in workflow execution.<br />
+          3. How to manage processes and workflows effectively.
+
+        </p>
+        <div class="mt-5 flex justify-center">
+          <iframe src="https://www.youtube.com/embed/OyYQL4TsfzM" width="700" height="400" allow="autoplay"
+            allowfullscreen></iframe>
         </div>
       </div>
 
     </div>
   </div>
 </section>
-
-{{ end }}
