--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -162,9 +162,9 @@
     </div>
 
     <div class="flex flex-col py-5 md:py-0">
-      <div class="px-5 md:px-0">
-        <h1 class='font-archivo-black text-2xl md:text-3xl tracking-wide text-right'>Projects</h1>
-        <p class='tracking-wide font-archivo text-right'>that already use <span class='font-bold'>Geoweaver</span></p>
+      <div class="px-5 md:px-10 pt-4">
+        <h1 class='font-archivo-black text-2xl md:text-3xl tracking-wide text-left'>Projects</h1>
+        <p class='tracking-wide font-archivo text-left'>that already use <span class='font-bold'>Geoweaver</span></p>
       </div>
 
       <hr class="my-4"/>
