--- a/themes/geoweaver/layouts/index.html
+++ b/themes/geoweaver/layouts/index.html
@@ -60,6 +60,12 @@
   </div>
 </section>
 
+<section>
+  <div class="justify-center flex p-5 rounded">
+    <iframe class="rounded-xl max-sm:w-full max-md:w-full max-sm:h-[300px] max-md:h-[300px]" width="61%" height="500px" src="https://www.youtube.com/embed/HeJ98daKHb4?si=BswR0IunC1ho7JYr&autoplay=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+  </div>
+</section>
+
 
 <section class="z-10 bg-[#a1e2fc] bg-cover">
 
